// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Work Query all fields 1`] = `
Object {
  "data": Object {
    "work": Object {
      "abstract": Array [
        "Selvbiografisk roman",
      ],
      "creators": Array [
        Object {
          "display": "karl ove knausgård",
          "nameSort": "karl ove knausgård",
        },
      ],
      "dk5MainEntry": Object {
        "code": "Dummy some dk5 code",
        "display": "Dummy some dk5 display",
      },
      "fictionNonfiction": Object {
        "code": "FICTION",
        "display": "Dummy skønlitteratur",
      },
      "genreAndForm": Array [],
      "mainLanguages": Array [],
      "manifestations": Object {
        "all": Array [
          Object {
            "pid": "800010-katalog:99121962154805763__1",
          },
          Object {
            "pid": "300101-katalog:28486006",
          },
          Object {
            "pid": "870970-basis:29433909",
          },
        ],
        "first": Object {
          "pid": "300101-katalog:28486006",
        },
        "latest": Object {
          "pid": "870970-basis:29433909",
        },
      },
      "materialTypes": Array [
        Object {
          "general": "Dummy general type",
          "specific": "Bog",
        },
        Object {
          "general": "Dummy general type",
          "specific": "Ebog",
        },
      ],
      "series": Array [
        Object {
          "alternativeTitles": Array [
            "Dummy Some Series, parallel title",
            "Dummy Some Series, another parallel title",
          ],
          "isPopular": true,
          "numberInSeries": Object {
            "display": "Dummy number one",
            "number": 1,
          },
          "parallelTitles": Array [],
          "readThisFirst": true,
          "readThisWhenever": false,
          "title": "Dummy Some Series",
        },
        Object {
          "alternativeTitles": Array [],
          "isPopular": false,
          "numberInSeries": Object {
            "display": "Dummy number one",
            "number": 1,
          },
          "parallelTitles": Array [
            "Dummy  Some Series, parallel title",
            "Dummy Some Series, another parallel title",
          ],
          "readThisFirst": null,
          "readThisWhenever": null,
          "title": "Dummy Some Series",
        },
      ],
      "seriesMembers": Array [],
      "subjects": Object {
        "all": Array [
          Object {
            "display": "krimi",
          },
          Object {
            "display": "krimi",
          },
          Object {
            "display": "småbørnsbog",
          },
        ],
        "dbcVerified": Array [],
      },
      "titles": Object {
        "full": Array [
          "Min kamp : roman. 1. bog",
        ],
        "main": Array [
          "min kamp",
        ],
        "original": Array [
          "Dummy Some Title Origintal",
        ],
        "parallel": Array [
          "Dummy Parallel Title 1",
          "Dummy Parallel Title 2",
        ],
        "sort": "Dummy Some Title Sort",
        "standard": "Dummy Some Title Standard",
        "translated": Array [
          "Dummy Oversat titel",
        ],
      },
      "universe": Object {
        "title": "Dummy Some Universe",
      },
      "workId": "work-of:870970-basis:28329490",
      "workTypes": Array [
        "LITERATURE",
      ],
      "workYear": "1988",
    },
  },
}
`;

exports[`Work fetch by faust 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:28329490",
    },
  },
}
`;

exports[`Work fetch by id 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:28329490",
    },
  },
}
`;

exports[`Work fetch by pid 1`] = `
Object {
  "data": Object {
    "work": Object {
      "workId": "work-of:870970-basis:28329490",
    },
  },
}
`;

exports[`Work fetch multi by faust 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:28329490",
      },
    ],
  },
}
`;

exports[`Work fetch multi by id 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:28329490",
      },
    ],
  },
}
`;

exports[`Work fetch multi by pid 1`] = `
Object {
  "data": Object {
    "works": Array [
      Object {
        "workId": "work-of:870970-basis:28329490",
      },
    ],
  },
}
`;
